# Krishi-Rakshak

./: .env.example  =3  Dockerfile  Readme.md  docker-compose.yml  dockerfile.worker  krishi.db  pyproject.toml  settings.gradle.kts  test_backend.sh
.github/workflows/: ci.yml
app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
krishirakshak-ml/: README.md  data_retention.md  pyproject.toml
krishirakshak-ml/.github/workflows/: ci.yml
krishirakshak-ml/active_learning/: ingest_feedback.py  prepare_al_batch.py  run_cycle.py
krishirakshak-ml/data/raw/: README.md
krishirakshak-ml/data/synthetic/: generator.py
krishirakshak-ml/datasets/: data_config.yaml  prepare_dataset.py
krishirakshak-ml/docker/: Dockerfile.train  docker-compose.yml
krishirakshak-ml/experiments/example_notebooks/: README.md
krishirakshak-ml/export/: export_model.py  optimize.md  quantize.py
krishirakshak-ml/federated/: flower_example.py
krishirakshak-ml/inference/: batch_infer.py  infer.py
krishirakshak-ml/inference/serve/: Dockerfile  app.py
krishirakshak-ml/krishirakshak_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
krishirakshak-ml/krishirakshak_ml/inference/serve/: app.py
krishirakshak-ml/labeling/: label_conversion.py
krishirakshak-ml/labeling/labelstudio/: README.md  project_config.xml
krishirakshak-ml/models/: loss.py  mobilenet_tflite_example.py  models.py
krishirakshak-ml/registry/: model_card_template.md  promote_to_prod.py  registry.py  serve_model.sh
krishirakshak-ml/registry/mlflow/: README.md
krishirakshak-ml/tests/: feedback.json
krishirakshak-ml/tests/integration/: test_serve.py
krishirakshak-ml/tests/unit/: test_active_learning.py  test_al_selection.py  test_dataset.py  test_export.py
krishirakshak-ml/tools/: android_benchmark_adb.sh  benchmark.py  monitoring.py  profile.py
krishirakshak-ml/training/: callbacks.py  eval.py  requirements-train.txt  train.py
krishirakshak-ml/training/metrics/: __init__.py  map_simplified.py
krishirakshak-ml/training/train_configs/: medium.yaml  prod.yaml  small.yaml
krishirakshak_backend/: auth.py  config.py  crud.py  db.py  main.py  models.py  schemas.py  storage.py  tasks.py  utils.py
krishirakshak_backend.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+31 files in other folders)
